--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 05:05:02 2018</p>
+         Last Run: Fri Nov 16 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -31,22 +31,22 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-15</td>
+                        <td>-12</td>
+                        <td>-16</td>
                         <td>4</td>
-                        <td>85</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>3</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -58,7 +58,7 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -102,8 +102,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-15",
-                 "-13",
+                 "-16",
+                 "-14",
                  "-11",
                  "-6"
                ]
@@ -115,8 +115,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11",
-                 "-9",
+                 "-12",
+                 "-10",
                  "-7",
                  "-3"
                ]
@@ -188,9 +188,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "80",
-                 "69",
+                 "88",
+                 "81",
+                 "70",
                  "55"
                ]
              },
@@ -200,7 +200,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
+                 "6",
                  "6",
                  "1",
                  "1"
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 05:05:02 2018</p>
+         Last Run: Fri Nov 16 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,10 +268,10 @@
                         <td>7</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>1</td>
-                        <td>16</td>
-                        <td>WNW</td>
+                        <td>14</td>
+                        <td>W</td>
                         <td>64</td>
                      </tr>
                      <tr>
@@ -280,11 +280,11 @@
                         <td>8</td>
                         <td>5</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>WNW</td>
-                        <td>65</td>
+                        <td>W</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,11 +292,11 @@
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "44",
                  "43",
-                 "42",
-                 "42"
+                 "43"
                ]
              },
              {
@@ -417,8 +417,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "64",
-                 "65",
-                 "65"
+                 "66",
+                 "66"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 05:05:02 2018</p>
+         Last Run: Fri Nov 16 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -482,8 +482,8 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>1</td>
-                        <td>64</td>
+                        <td>2</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -494,24 +494,24 @@
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>1</td>
-                        <td>66</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
-                        <td>16</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
                         <td>2</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
                         <td>17</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Clear</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>2</td>
+                        <td>69</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -540,7 +540,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-4"
+                 "-6"
                ]
              },
              {
@@ -552,7 +552,7 @@
                "data":[
                  "0",
                  "-1",
-                 "-1"
+                 "-2"
                ]
              }
            ]
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
+                 "2",
+                 "2",
                  "2"
                ]
              },
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
-                 "66",
-                 "68"
+                 "65",
+                 "67",
+                 "69"
                ]
              },
              {
@@ -632,8 +632,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "16",
-                 "17"
+                 "17",
+                 "18"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 05:05:02 2018</p>
+         Last Run: Fri Nov 16 06:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -702,7 +702,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>62</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -712,21 +712,21 @@
                         <td>1</td>
                         <td>65</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WSW</td>
-                        <td>61</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-5</td>
                         <td>1</td>
-                        <td>64</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>61</td>
+                        <td>13</td>
+                        <td>SW</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -837,7 +837,7 @@
                "data":[
                  "65",
                  "65",
-                 "64"
+                 "66"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
                  "61",
-                 "61"
+                 "60",
+                 "59"
                ]
              }
            ]
