--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 07:05:02 2018</p>
+         Last Run: Fri Nov 16 08:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>88</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -46,33 +46,33 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>82</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>6</td>
+                        <td>SW</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
                         <td>-7</td>
-                        <td>-11</td>
+                        <td>-12</td>
                         <td>2</td>
                         <td>70</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>-3</td>
-                        <td>-6</td>
+                        <td>-7</td>
                         <td>1</td>
                         <td>56</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>1</td>
                      </tr>
@@ -104,8 +104,8 @@
                "data":[
                  "-16",
                  "-14",
-                 "-11",
-                 "-6"
+                 "-12",
+                 "-7"
                ]
              },
              {
@@ -188,8 +188,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "88",
-                 "82",
+                 "89",
+                 "83",
                  "70",
                  "56"
                ]
@@ -201,8 +201,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "6",
-                 "6",
-                 "2",
+                 "7",
+                 "1",
                  "1"
                ]
              }
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 07:05:02 2018</p>
+         Last Run: Fri Nov 16 08:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,11 +268,11 @@
                         <td>7</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>46</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>64</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -280,23 +280,23 @@
                         <td>8</td>
                         <td>5</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>1</td>
-                        <td>16</td>
-                        <td>W</td>
-                        <td>66</td>
+                        <td>18</td>
+                        <td>WNW</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>0</td>
                         <td>43</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>WNW</td>
-                        <td>66</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -325,7 +325,7 @@
                "data":[
                  "4",
                  "5",
-                 "6"
+                 "9"
                ]
              },
              {
@@ -337,7 +337,7 @@
                "data":[
                  "7",
                  "8",
-                 "8"
+                 "9"
                ]
              }
            ]
@@ -405,8 +405,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "46",
                  "44",
-                 "43",
                  "43"
                ]
              },
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
                  "66",
-                 "66"
+                 "65",
+                 "65"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 07:05:02 2018</p>
+         Last Run: Fri Nov 16 08:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -482,7 +482,7 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>65</td>
                         <td>0</td>
                         <td>10</td>
@@ -494,12 +494,12 @@
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>1</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "1",
+                 "1",
                  "2"
                ]
              },
@@ -621,8 +621,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "67",
-                 "69"
+                 "66",
+                 "68"
                ]
              },
              {
@@ -632,8 +632,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "17",
-                 "18"
+                 "16",
+                 "17"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 07:05:02 2018</p>
+         Last Run: Fri Nov 16 08:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -710,7 +710,7 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
@@ -724,7 +724,7 @@
                         <td>1</td>
                         <td>66</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SW</td>
                         <td>59</td>
                      </tr>
@@ -836,7 +836,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "65",
+                 "66",
                  "66"
                ]
              },
