--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 09:05:02 2018</p>
+         Last Run: Fri Nov 16 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -32,11 +32,11 @@
                         <td>08:00 AM</td>
                         <td>Clear</td>
                         <td>-12</td>
-                        <td>-16</td>
-                        <td>4</td>
+                        <td>-17</td>
+                        <td>5</td>
                         <td>85</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>SW</td>
                         <td>5</td>
                      </tr>
@@ -49,8 +49,8 @@
                         <td>78</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>3</td>
+                        <td>WSW</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -74,7 +74,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,7 +102,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-16",
+                 "-17",
                  "-13",
                  "-12",
                  "-6"
@@ -176,7 +176,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "5",
                  "3",
                  "2",
                  "1"
@@ -201,9 +201,9 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "5",
+                 "4",
                  "3",
-                 "3",
-                 "2"
+                 "1"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 09:05:02 2018</p>
+         Last Run: Fri Nov 16 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,7 +271,7 @@
                         <td>47</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>66</td>
                      </tr>
                      <tr>
@@ -280,10 +280,10 @@
                         <td>8</td>
                         <td>5</td>
                         <td>0</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>1</td>
                         <td>18</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>63</td>
                      </tr>
                      <tr>
@@ -296,7 +296,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>WNW</td>
-                        <td>66</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -406,7 +406,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "47",
-                 "45",
+                 "44",
                  "44"
                ]
              },
@@ -418,7 +418,7 @@
                "data":[
                  "66",
                  "63",
-                 "66"
+                 "65"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 09:05:02 2018</p>
+         Last Run: Fri Nov 16 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -482,8 +482,8 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>65</td>
+                        <td>1</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -494,12 +494,12 @@
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>1</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -507,7 +507,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "1",
+                 "1",
                  "2"
                ]
              },
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "67",
-                 "69"
+                 "64",
+                 "66",
+                 "68"
                ]
              },
              {
@@ -632,7 +632,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "17",
+                 "16",
                  "17"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 09:05:02 2018</p>
+         Last Run: Fri Nov 16 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
@@ -710,7 +710,7 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
@@ -724,7 +724,7 @@
                         <td>1</td>
                         <td>66</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SW</td>
                         <td>59</td>
                      </tr>
@@ -835,8 +835,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "66",
+                 "65",
+                 "65",
                  "66"
                ]
              },
