--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 12:05:02 2018</p>
+         Last Run: Fri Nov 16 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Clear</td>
                         <td>-12</td>
                         <td>-16</td>
-                        <td>4</td>
-                        <td>87</td>
+                        <td>5</td>
+                        <td>89</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>7</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -74,7 +74,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>3</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -176,7 +176,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "5",
                  "3",
                  "2",
                  "1"
@@ -188,8 +188,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
-                 "80",
+                 "89",
+                 "81",
                  "69",
                  "56"
                ]
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "9",
                  "7",
-                 "6",
                  "5",
-                 "3"
+                 "2"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 12:05:02 2018</p>
+         Last Run: Fri Nov 16 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,8 +271,8 @@
                         <td>50</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>W</td>
-                        <td>58</td>
+                        <td>WNW</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -283,18 +283,18 @@
                         <td>47</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>W</td>
-                        <td>53</td>
+                        <td>WNW</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>8</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>1</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>WNW</td>
                         <td>58</td>
                      </tr>
@@ -325,7 +325,7 @@
                "data":[
                  "4",
                  "5",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -407,7 +407,7 @@
                "data":[
                  "50",
                  "47",
-                 "46"
+                 "47"
                ]
              },
              {
@@ -416,8 +416,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "53",
+                 "57",
+                 "52",
                  "58"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 12:05:02 2018</p>
+         Last Run: Fri Nov 16 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -482,8 +482,8 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>66</td>
+                        <td>1</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -504,8 +504,8 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>2</td>
                         <td>68</td>
                         <td>0</td>
@@ -540,7 +540,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-6"
+                 "-4"
                ]
              },
              {
@@ -552,7 +552,7 @@
                "data":[
                  "0",
                  "-1",
-                 "-2"
+                 "-1"
                ]
              }
            ]
@@ -609,7 +609,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "2",
                  "2"
                ]
@@ -620,7 +620,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
+                 "65",
                  "67",
                  "68"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 12:05:02 2018</p>
+         Last Run: Fri Nov 16 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,12 +697,12 @@
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>66</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -714,7 +714,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,7 +722,7 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
@@ -824,7 +824,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
+                 "2",
                  "2",
                  "2"
                ]
@@ -837,7 +837,7 @@
                "data":[
                  "66",
                  "68",
-                 "69"
+                 "68"
                ]
              },
              {
@@ -846,8 +846,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "53",
+                 "54",
+                 "54",
                  "54"
                ]
              }
