--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 16:05:02 2018</p>
+         Last Run: Fri Nov 16 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Clear</td>
                         <td>-11</td>
                         <td>-15</td>
-                        <td>4</td>
-                        <td>81</td>
+                        <td>5</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>11</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-9</td>
                         <td>-13</td>
-                        <td>3</td>
-                        <td>74</td>
+                        <td>4</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -58,9 +58,9 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>6</td>
                      </tr>
@@ -176,8 +176,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "5",
                  "4",
-                 "3",
                  "2",
                  "1"
                ]
@@ -188,9 +188,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "74",
-                 "64",
+                 "82",
+                 "75",
+                 "65",
                  "53"
                ]
              },
@@ -200,8 +200,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "11",
+                 "14",
+                 "12",
                  "6",
                  "2"
                ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 16:05:02 2018</p>
+         Last Run: Fri Nov 16 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,35 +268,35 @@
                         <td>7</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>69</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>5</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>47</td>
                         <td>1</td>
                         <td>16</td>
                         <td>WNW</td>
-                        <td>58</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>1</td>
+                        <td>5</td>
                         <td>47</td>
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>56</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -395,8 +395,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "1",
-                 "1"
+                 "2",
+                 "5"
                ]
              },
              {
@@ -405,7 +405,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
+                 "49",
                  "47",
                  "47"
                ]
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
-                 "58",
-                 "56"
+                 "66",
+                 "61",
+                 "57"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 16:05:02 2018</p>
+         Last Run: Fri Nov 16 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -487,19 +487,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -511,7 +511,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>16</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -621,7 +621,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "67",
+                 "68",
                  "71"
                ]
              },
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "13",
-                 "16"
+                 "29",
+                 "30",
+                 "29"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 16:05:02 2018</p>
+         Last Run: Fri Nov 16 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -697,36 +697,36 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>59</td>
+                        <td>1</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>48</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>61</td>
+                        <td>1</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>48</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>48</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -824,9 +824,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "1",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -835,8 +835,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
                  "61",
+                 "62",
                  "63"
                ]
              },
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "48",
-                 "48"
+                 "55",
+                 "54",
+                 "52"
                ]
              }
            ]
