--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 18:05:02 2018</p>
+         Last Run: Fri Nov 16 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -31,25 +31,25 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-15</td>
+                        <td>-12</td>
+                        <td>-17</td>
                         <td>5</td>
-                        <td>82</td>
+                        <td>84</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>13</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
-                        <td>3</td>
-                        <td>75</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>4</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>11</td>
                      </tr>
                      <tr>
@@ -58,9 +58,9 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>6</td>
                      </tr>
@@ -70,7 +70,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -102,8 +102,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-15",
-                 "-13",
+                 "-17",
+                 "-14",
                  "-10",
                  "-6"
                ]
@@ -115,8 +115,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-11",
-                 "-9",
+                 "-12",
+                 "-10",
                  "-6",
                  "-3"
                ]
@@ -177,7 +177,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "3",
+                 "4",
                  "2",
                  "1"
                ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "75",
-                 "65",
-                 "54"
+                 "84",
+                 "78",
+                 "68",
+                 "56"
                ]
              },
              {
@@ -200,7 +200,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
+                 "15",
                  "11",
                  "6",
                  "2"
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 18:05:02 2018</p>
+         Last Run: Fri Nov 16 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,33 +268,33 @@
                         <td>7</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>49</td>
-                        <td>1</td>
-                        <td>16</td>
-                        <td>WNW</td>
-                        <td>67</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>47</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>16</td>
                         <td>WNW</td>
                         <td>62</td>
                      </tr>
                      <tr>
-                        <td>02:00 PM</td>
+                        <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>9</td>
-                        <td>9</td>
+                        <td>8</td>
                         <td>6</td>
-                        <td>47</td>
+                        <td>2</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>14</td>
+                        <td>WNW</td>
+                        <td>58</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>6</td>
+                        <td>49</td>
+                        <td>1</td>
+                        <td>13</td>
                         <td>WNW</td>
                         <td>59</td>
                      </tr>
@@ -324,8 +324,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "4",
-                 "5",
-                 "9"
+                 "6",
+                 "6"
                ]
              },
              {
@@ -337,7 +337,7 @@
                "data":[
                  "7",
                  "8",
-                 "9"
+                 "8"
                ]
              }
            ]
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "47",
-                 "47"
+                 "50",
+                 "48",
+                 "49"
                ]
              },
              {
@@ -416,8 +416,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "67",
                  "62",
+                 "58",
                  "59"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 18:05:02 2018</p>
+         Last Run: Fri Nov 16 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,34 +480,34 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-3</td>
-                        <td>2</td>
-                        <td>65</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>1</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>29</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>68</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>1</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>2</td>
-                        <td>70</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>1</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-2",
                  "-3",
-                 "-4",
-                 "-6"
+                 "-4"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "1",
                  "0",
-                 "-1",
-                 "-2"
+                 "-1"
                ]
              }
            ]
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "1",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "68",
-                 "70"
+                 "63",
+                 "66",
+                 "68"
                ]
              },
              {
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 18:05:02 2018</p>
+         Last Run: Fri Nov 16 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
@@ -710,7 +710,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
@@ -722,11 +722,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SW</td>
-                        <td>52</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "61",
-                 "62"
+                 "58",
+                 "60",
+                 "61"
                ]
              },
              {
@@ -848,7 +848,7 @@
                "data":[
                  "54",
                  "53",
-                 "52"
+                 "53"
                ]
              }
            ]
